Change charset of css to 'utf-8'.

--- a/css/default.css
+++ b/css/default.css
@@ -1,5 +1,5 @@
 .au-msgbox {
-    font-family: '微软雅黑', Georgia, serif;
+    font-family: "Microsoft YaHei", Georgia, serif;
     font-size: 12px;
 }
 
